Addeda transform registry and a few tests.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -46,6 +46,8 @@
     <Compile Include="..\.build\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Builder\ITransformRuleRegistry.cs" />
+    <Compile Include="Builder\TransformRule.cs" />
     <Compile Include="ITransformer.cs" />
     <Compile Include="ITransformRegistry.cs" />
     <Compile Include="ITransformStore.cs" />
