--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,5 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+/Sources/Bijectiv.Tests/FakesAssemblies
+*.DotSettings
