--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -55,12 +55,18 @@
     <Compile Include="Builder\TransformArtifact.cs" />
     <Compile Include="Builder\TransformArtifactBuilder.cs" />
     <Compile Include="Builder\TransformFragment.cs" />
+    <Compile Include="Stores\ConvertibleTransformStore.cs" />
+    <Compile Include="Stores\IdenticalPrimitiveTransformStore.cs" />
+    <Compile Include="IMergeTransform.cs" />
+    <Compile Include="ITransform.cs" />
     <Compile Include="ITransformer.cs" />
     <Compile Include="ITransformStore.cs" />
     <Compile Include="TransformStoreBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TransformerContext.cs" />
+    <Compile Include="TransformContext.cs" />
     <Compile Include="TransformStoreBuilderExtensions.cs" />
+    <Compile Include="Transforms\ConvertibleTransform.cs" />
+    <Compile Include="Transforms\PassthroughTransform.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.build\Bijectiv.snk">
@@ -78,6 +84,7 @@
       <HintPath>..\packages\JetBrains.Annotations.Portable.8.0.5185.29681\lib\portable-win+net40+sl40+wp+Xbox40\JetBrains.Annotations.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
