--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -69,11 +69,17 @@
     <Compile Include="Builder\TransformArtifactTests.cs" />
     <Compile Include="Builder\TransformFragmentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Stores\ConvertibleTransformStoreTests.cs" />
+    <Compile Include="Stores\IdenticalPrimitiveTransformStoreTests.cs" />
+    <Compile Include="TestTypes\TestEnum1.cs" />
     <Compile Include="Tools\Abstract.cs" />
+    <Compile Include="Tools\CustomDataSource.cs" />
     <Compile Include="Tools\TestExtensions.cs" />
     <Compile Include="TransformStoreBuilderExtensionsTests.cs" />
     <Compile Include="TransformStoreBuilderTests.cs" />
+    <Compile Include="Transforms\ConvertibleTransformTests.cs" />
     <Compile Include="Transforms\PassthroughTransformTests.cs" />
+    <Compile Include="Transforms\TypeClasses.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.build\Bijectiv.snk">
@@ -93,9 +99,7 @@
       <Name>Bijectiv</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Stores\" />
-  </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
