--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -51,6 +51,8 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Builder\ActivatorFragment.cs" />
+    <Compile Include="Builder\CustomFactoryFragment.cs" />
+    <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
     <Compile Include="Builder\InheritsFragment.cs" />
     <Compile Include="Builder\ITransformArtifactBuilder.cs" />
@@ -59,7 +61,6 @@
     <Compile Include="Builder\TransformArtifact.cs" />
     <Compile Include="Builder\TransformArtifactBuilder.cs" />
     <Compile Include="Builder\TransformFragment.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Stores\CompositeTransformStore.cs" />
     <Compile Include="Stores\ConvertibleTransformStore.cs" />
     <Compile Include="Stores\IdenticalPrimitiveTransformStore.cs" />
