Added factory builder methods.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -50,17 +50,19 @@
     <Compile Include="..\.build\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Builder\ActivatorFragment.cs" />
+    <Compile Include="Builder\ActivateFragment.cs" />
     <Compile Include="Builder\CustomFactoryFragment.cs" />
     <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
     <Compile Include="Builder\InheritsFragment.cs" />
     <Compile Include="Builder\ITransformArtifactBuilder.cs" />
+    <Compile Include="Builder\ITransformArtifactBuilderF.cs" />
     <Compile Include="Builder\ITransformArtifactRegistry.cs" />
     <Compile Include="Builder\LegendryFragments.cs" />
     <Compile Include="Builder\TransformArtifact.cs" />
     <Compile Include="Builder\TransformArtifactBuilder.cs" />
     <Compile Include="Builder\TransformFragment.cs" />
+    <Compile Include="ITransformContext.cs" />
     <Compile Include="Stores\CompositeTransformStore.cs" />
     <Compile Include="Stores\ConvertibleTransformStore.cs" />
     <Compile Include="Stores\IdenticalPrimitiveTransformStore.cs" />
