--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -43,6 +43,10 @@
     <AssemblyOriginatorKeyFile>..\.build\Bijectiv.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=6.1.0.0, Culture=neutral, PublicKeyToken=3f033448d4bb5376, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\JetBrains.Annotations.7.0\lib\net45\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.2.1402.2112\lib\net40\Moq.dll</HintPath>
     </Reference>
@@ -64,8 +68,9 @@
     <Compile Include="..\.build\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Builder\ActivatorFragmentTests.cs" />
+    <Compile Include="Builder\ActivateFragmentTests.cs" />
     <Compile Include="Builder\CustomFactoryFragmentTests.cs" />
+    <Compile Include="Builder\CustomFactoryParametersTests.cs" />
     <Compile Include="Builder\DefaultFactoryFragmentTests.cs" />
     <Compile Include="Builder\InheritsFragmentTests.cs" />
     <Compile Include="Builder\TransformArtifactBuilderTests.cs" />
