--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Builder\TransformArtifactTests.cs" />
     <Compile Include="Builder\TransformFragmentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Spikes.cs" />
     <Compile Include="Stores\CompositeTransformStoreTests.cs" />
     <Compile Include="Stores\ConvertibleTransformStoreTests.cs" />
     <Compile Include="Stores\IdenticalPrimitiveTransformStoreTests.cs" />
@@ -84,16 +85,18 @@
     <Compile Include="TestTypes\BaseTestClass2.cs" />
     <Compile Include="TestTypes\DerivedTestClass1.cs" />
     <Compile Include="TestTypes\DerivedTestClass2.cs" />
+    <Compile Include="TestTypes\MultiConstructorTestClass.cs" />
     <Compile Include="TestTypes\TestClass1.cs" />
     <Compile Include="TestTypes\TestClass2.cs" />
     <Compile Include="TestTypes\TestEnum1.cs" />
-    <Compile Include="Tools\Stub.cs" />
-    <Compile Include="Tools\TestExtensions.cs" />
+    <Compile Include="TestTools\Stub.cs" />
+    <Compile Include="TestTools\TestExtensions.cs" />
     <Compile Include="TransformStoreBuilderExtensionsTests.cs" />
     <Compile Include="TransformStoreBuilderTests.cs" />
     <Compile Include="Transforms\ConvertibleTransformTests.cs" />
     <Compile Include="Transforms\PassthroughTransformTests.cs" />
     <Compile Include="Transforms\TypeClasses.cs" />
+    <Compile Include="Utilities\ReflectTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.build\Bijectiv.snk">
