--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -54,6 +54,15 @@
     <Compile Include="Builder\CustomFactoryFragment.cs" />
     <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
+    <Compile Include="Builder\TransformArtifactRegistry.cs" />
+    <Compile Include="Forge\ActivateHammer.cs" />
+    <Compile Include="Forge\CandidateHammer.cs" />
+    <Compile Include="Forge\InitializeHammer.cs" />
+    <Compile Include="Forge\ReturnHammer.cs" />
+    <Compile Include="Forge\TransformOreExtensions.cs" />
+    <Compile Include="Forge\UninheritableFragmentFilterHammer.cs" />
+    <Compile Include="Forge\ITransformHammer.cs" />
+    <Compile Include="Forge\TransformForge.cs" />
     <Compile Include="Builder\InheritsFragment.cs" />
     <Compile Include="Builder\ITransformArtifactBuilder.cs" />
     <Compile Include="Builder\ITransformArtifactBuilderF.cs" />
@@ -62,6 +71,7 @@
     <Compile Include="Builder\TransformArtifact.cs" />
     <Compile Include="Builder\TransformArtifactBuilder.cs" />
     <Compile Include="Builder\TransformFragment.cs" />
+    <Compile Include="Forge\TransformOre.cs" />
     <Compile Include="ITransformContext.cs" />
     <Compile Include="Stores\CompositeTransformStore.cs" />
     <Compile Include="Stores\ConvertibleTransformStore.cs" />
@@ -70,12 +80,17 @@
     <Compile Include="ITransform.cs" />
     <Compile Include="ITransformer.cs" />
     <Compile Include="ITransformStore.cs" />
+    <Compile Include="TransformItem.cs" />
     <Compile Include="TransformStoreBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransformContext.cs" />
     <Compile Include="TransformStoreBuilderExtensions.cs" />
     <Compile Include="Transforms\ConvertibleTransform.cs" />
+    <Compile Include="Transforms\DelegateTransform.cs" />
     <Compile Include="Transforms\PassthroughTransform.cs" />
+    <Compile Include="Utilities\CollectionExtensions.cs" />
+    <Compile Include="Utilities\Placeholder.cs" />
+    <Compile Include="Utilities\Reflect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.build\Bijectiv.snk">
