Removed the stack from the transform context.
Renamed Forge to Factory.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -54,24 +54,23 @@
     <Compile Include="Builder\CustomFactoryFragment.cs" />
     <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
-    <Compile Include="Builder\TransformArtifactRegistry.cs" />
-    <Compile Include="Forge\ActivateHammer.cs" />
-    <Compile Include="Forge\CandidateHammer.cs" />
-    <Compile Include="Forge\InitializeHammer.cs" />
-    <Compile Include="Forge\ReturnHammer.cs" />
-    <Compile Include="Forge\TransformOreExtensions.cs" />
-    <Compile Include="Forge\UninheritableFragmentFilterHammer.cs" />
-    <Compile Include="Forge\ITransformHammer.cs" />
-    <Compile Include="Forge\TransformForge.cs" />
+    <Compile Include="Builder\TransformDefinitionRegistry.cs" />
+    <Compile Include="Factory\ActivateTask.cs" />
+    <Compile Include="Factory\CandidateTask.cs" />
+    <Compile Include="Factory\InitializeTask.cs" />
+    <Compile Include="Factory\ReturnTask.cs" />
+    <Compile Include="Factory\UninheritableFragmentFilterTask.cs" />
+    <Compile Include="Factory\ITransformTask.cs" />
+    <Compile Include="Factory\TransformFactory.cs" />
     <Compile Include="Builder\InheritsFragment.cs" />
-    <Compile Include="Builder\ITransformArtifactBuilder.cs" />
-    <Compile Include="Builder\ITransformArtifactBuilderF.cs" />
-    <Compile Include="Builder\ITransformArtifactRegistry.cs" />
+    <Compile Include="Builder\ITransformDefinitionBuilder.cs" />
+    <Compile Include="Builder\ITransformDefintionBuilderF.cs" />
+    <Compile Include="Builder\ITransformDefinitionRegistry.cs" />
     <Compile Include="Builder\LegendryFragments.cs" />
-    <Compile Include="Builder\TransformArtifact.cs" />
-    <Compile Include="Builder\TransformArtifactBuilder.cs" />
+    <Compile Include="Builder\TransformDefinition.cs" />
+    <Compile Include="Builder\TransformDefinitionBuilder.cs" />
     <Compile Include="Builder\TransformFragment.cs" />
-    <Compile Include="Forge\TransformOre.cs" />
+    <Compile Include="Factory\TransformScaffold.cs" />
     <Compile Include="ITransformContext.cs" />
     <Compile Include="Stores\CompositeTransformStore.cs" />
     <Compile Include="Stores\ConvertibleTransformStore.cs" />
@@ -80,7 +79,6 @@
     <Compile Include="ITransform.cs" />
     <Compile Include="ITransformer.cs" />
     <Compile Include="ITransformStore.cs" />
-    <Compile Include="TransformItem.cs" />
     <Compile Include="TransformStoreBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransformContext.cs" />
