--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -81,11 +81,16 @@
     <Compile Include="Stores\CompositeTransformStoreTests.cs" />
     <Compile Include="Stores\ConvertibleTransformStoreTests.cs" />
     <Compile Include="Stores\IdenticalPrimitiveTransformStoreTests.cs" />
+    <Compile Include="TestTools\ArgumentExceptionExpectedAttribute.cs" />
+    <Compile Include="TestTools\ArgumentNullExceptionExpectedAttribute.cs" />
+    <Compile Include="TestTools\InvalidOperationExceptionExpectedAttribute.cs" />
     <Compile Include="TestTypes\BaseTestClass1.cs" />
     <Compile Include="TestTypes\BaseTestClass2.cs" />
     <Compile Include="TestTypes\DerivedTestClass1.cs" />
     <Compile Include="TestTypes\DerivedTestClass2.cs" />
+    <Compile Include="TestTypes\FieldTestClass.cs" />
     <Compile Include="TestTypes\MultiConstructorTestClass.cs" />
+    <Compile Include="TestTypes\PropertyTestClass.cs" />
     <Compile Include="TestTypes\TestClass1.cs" />
     <Compile Include="TestTypes\TestClass2.cs" />
     <Compile Include="TestTypes\TestEnum1.cs" />
@@ -94,8 +99,11 @@
     <Compile Include="TransformStoreBuilderExtensionsTests.cs" />
     <Compile Include="TransformStoreBuilderTests.cs" />
     <Compile Include="Transforms\ConvertibleTransformTests.cs" />
+    <Compile Include="Transforms\DelegateTransformTests.cs" />
     <Compile Include="Transforms\PassthroughTransformTests.cs" />
-    <Compile Include="Transforms\TypeClasses.cs" />
+    <Compile Include="TestTools\TypeClasses.cs" />
+    <Compile Include="Utilities\CollectionExtensionsTests.cs" />
+    <Compile Include="Utilities\PlaceholderTests.cs" />
     <Compile Include="Utilities\ReflectTests.cs" />
   </ItemGroup>
   <ItemGroup>
