Completed testing of the first factory task.

--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Builder\TransformDefintionBuilderTests.cs" />
     <Compile Include="Builder\TransformDefinitionTests.cs" />
     <Compile Include="Builder\TransformFragmentTests.cs" />
+    <Compile Include="Factory\ActivateTargetExpressionFactoryTests.cs" />
+    <Compile Include="Factory\CreateTargetTaskTests.cs" />
     <Compile Include="Factory\InitializeVariablesTaskTests.cs" />
     <Compile Include="Factory\InititalizeFragmentsTaskTests.cs" />
     <Compile Include="Factory\ReturnTargetAsObjectTaskTests.cs" />
@@ -108,6 +110,7 @@
     <Compile Include="Transforms\PassthroughTransformTests.cs" />
     <Compile Include="TestTools\TypeClasses.cs" />
     <Compile Include="Utilities\CollectionExtensionsTests.cs" />
+    <Compile Include="Utilities\EnumerableExtensionsTests.cs" />
     <Compile Include="Utilities\PlaceholderTests.cs" />
     <Compile Include="Utilities\ReflectTests.cs" />
   </ItemGroup>
