--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -54,6 +54,10 @@
     <Compile Include="Builder\CustomFactoryFragment.cs" />
     <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
+    <Compile Include="BuildConfigurator.cs" />
+    <Compile Include="Stores\DelegateTransformStoreFactory.cs" />
+    <Compile Include="Stores\InstanceTransformStoreFactory.cs" />
+    <Compile Include="Stores\ITransformStoreFactory.cs" />
     <Compile Include="Builder\TransformDefinitionRegistry.cs" />
     <Compile Include="Factory\ActivateTargetExpressionFactory.cs" />
     <Compile Include="Factory\CreateTargetTask.cs" />
@@ -62,6 +66,7 @@
     <Compile Include="Factory\ISelectiveExpressionFactory.cs" />
     <Compile Include="Factory\InitializeFragmentsTask.cs" />
     <Compile Include="Factory\InitializeVariablesTask.cs" />
+    <Compile Include="Factory\ITransformFactory.cs" />
     <Compile Include="Factory\ReturnTargetAsObjectTask.cs" />
     <Compile Include="Factory\ITransformTask.cs" />
     <Compile Include="Factory\TransformFactory.cs" />
@@ -77,6 +82,7 @@
     <Compile Include="ITransformContext.cs" />
     <Compile Include="Stores\CompositeTransformStore.cs" />
     <Compile Include="Stores\ConvertibleTransformStore.cs" />
+    <Compile Include="Stores\CollectionTransformStore.cs" />
     <Compile Include="Stores\IdenticalPrimitiveTransformStore.cs" />
     <Compile Include="IMergeTransform.cs" />
     <Compile Include="ITransform.cs" />
