--- a/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
+++ b/Sources/Bijectiv.Tests/Bijectiv.Tests.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Builder\CustomFactoryParametersTests.cs" />
     <Compile Include="Builder\DefaultFactoryFragmentTests.cs" />
     <Compile Include="Builder\InheritsFragmentTests.cs" />
+    <Compile Include="Builder\NullSourceMemberStrategyTests.cs" />
+    <Compile Include="Builder\SourceMemberStrategyFragmentTests.cs" />
     <Compile Include="Builder\TransformDefinitionRegistryTests.cs" />
     <Compile Include="Builder\TransformDefintionBuilderTests.cs" />
     <Compile Include="Builder\TransformDefinitionTests.cs" />
