Added API for auto transforms.

--- a/Sources/Bijectiv/Bijectiv.csproj
+++ b/Sources/Bijectiv/Bijectiv.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Builder\CustomFactoryParameters.cs" />
     <Compile Include="Builder\DefaultFactoryFragment.cs" />
     <Compile Include="BuildConfigurator.cs" />
+    <Compile Include="Builder\AutoOptions.cs" />
     <Compile Include="Builder\NameRegexSourceMemberStrategy.cs" />
     <Compile Include="Builder\NullSourceMemberStrategy.cs" />
     <Compile Include="Builder\SourceMemberStrategyFragment.cs" />
